# secbot-2021-7drl

./: .gitignore  Cargo.toml  README.md  webglbuild.bat
src/: main.rs  (+3 more)
tutorial/: Cargo.toml
tutorial/7drl-2021-book/: book.toml
tutorial/7drl-2021-book/src/: SUMMARY.md  active_idle.md  asteroid_surface.md  colonist_chat.md  colonist_locate.md  colonist_rescue.md  colonist_status.md  colony_surface.md  cross_layer.md  day_0.md  day_1.md  day_2.md  day_3.md  day_4.md  day_one_cleaning_1.md  design.md  first_colonist.md  firstmap.md  header.md  hit_points.md  introduction.md  killing_secbot.md  mine_map1.md  mine_map2.md  mine_map3.md  mine_map4.md  naming.md  player_walk.md  rng.md  sad_colonists.md  shooting1.md  superstructure.md  targetable.md  targeting.md  template.md  template2.md  tooltips1.md  turn_state.md  vertical1.md  warnings_hostiles.md  (+1 more)
tutorial/active_components/: Cargo.toml
tutorial/hello_asteroid/: Cargo.toml
tutorial/hello_asteroid/src/: main.rs
tutorial/hello_bracket/: Cargo.toml
tutorial/hello_bracket/src/: main.rs
tutorial/hello_capsule/: Cargo.toml
tutorial/hello_capsule/src/: main.rs
tutorial/hello_colonist/: Cargo.toml
tutorial/hello_colonist_finder/: Cargo.toml
tutorial/hello_colonists/: Cargo.toml
tutorial/hello_colonists/src/: main.rs
tutorial/hello_colony/: Cargo.toml
tutorial/hello_colony/src/: main.rs  text.rs
tutorial/hello_entity/: Cargo.toml
tutorial/hello_modal/: Cargo.toml
tutorial/hello_modal/src/: main.rs
tutorial/hello_monsters/: Cargo.toml
tutorial/hello_secbot/: Cargo.toml
tutorial/hello_tooltip/: Cargo.toml
tutorial/hello_tooltip/src/: main.rs
tutorial/hello_windows/: Cargo.toml
tutorial/hit_points/: Cargo.toml
tutorial/hit_points/src/: main.rs
tutorial/killing_secbot/: Cargo.toml
tutorial/mining_map1/: Cargo.toml
tutorial/mining_map2/: Cargo.toml
tutorial/mining_map3/: Cargo.toml
tutorial/mining_map3/src/: main.rs
tutorial/mining_map4/: Cargo.toml
tutorial/pathing_colonists_chat/: Cargo.toml
tutorial/pathing_colonists_chat/src/: main.rs
tutorial/pathing_colonists_flat/: Cargo.toml
tutorial/pathing_colonists_flat/src/: main.rs
tutorial/sad_colonists/: Cargo.toml
tutorial/sad_colonists/src/: main.rs
tutorial/sea_of_dots/: Cargo.toml
tutorial/shooting1/: Cargo.toml
tutorial/src/: main.rs
tutorial/stairs1/: Cargo.toml
tutorial/stairs2/: Cargo.toml
tutorial/taking_names/: Cargo.toml
tutorial/targetable_colonists/: Cargo.toml
tutorial/warnings_hostiles/: Cargo.toml
(+230 files in other folders)
