[package]
name = "secbot-tutorial-main"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]

[workspace]
members = [
    # Day 1
    "hello_bracket",
    "sea_of_dots",
    "hello_entity",
    "hello_capsule",
    "hello_modal",
    "hello_tooltip",
    "hello_secbot",
    "hello_asteroid",
    "hello_windows",
]