[package]
name = "secbot-tutorial-main"
version = "0.1.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]

[workspace]
members = [
    # Day 1
    "hello_bracket",
    "sea_of_dots",
    "hello_entity",
    "hello_capsule",
    "hello_modal",
    "hello_tooltip",
    "hello_secbot",
    "hello_asteroid",
    "hello_windows",
    "hello_colony",
    "hello_colonist",
    "hello_colonists",
    "hello_colonist_finder",
    "pathing_colonists_flat",
    "pathing_colonists_chat",
    "hello_monsters",
    "targetable_colonists",
    "mining_map1",
    "mining_map2",
    "mining_map3",
    "mining_map4",
    "stairs1",
    "active_components",
    "stairs2",
    "taking_names",
    "hit_points",
    "shooting1",
    "warnings_hostiles",
    "killing_secbot",
    "sad_colonists",
]